force-app/main/default/objects/Deed_History__c/Deed_History__c.object-meta.xml
<CustomObject>
    <label>Property Deed History</label>
    <nameField>
        <displayFormat>DH-{000}</displayFormat>
        <label>Deed History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Deed Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>