force-app/main/default/objects/Deed_History__c/fields/Current_Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Buyer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Buyer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Deed_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>