force-app/main/default/objects/Deed_History__c/fields/Current_Seller__c.field-meta.xml
<CustomField>
    <fullName>Current_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Seller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Deed Histories (Previous Seller)</relationshipLabel>
    <relationshipName>Property_Deed_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>