force-app/main/default/objects/Deed_History__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation Deed</fullName>
            </value>
            <value>
                <fullName>Quit Claim Deed</fullName>
            </value>
            <value>
                <fullName>Intra-Family Transfer</fullName>
            </value>
            <value>
                <fullName>Stand Alone Mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>